<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.chanaka.navigationdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.chanaka.navigationdrawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.chanaka.navigationdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_details"
        android:name="com.chanaka.navigationdrawer.ui.myDetails.mydetails_fragment"
        android:label="@string/menu_myDetails"
        tools:layout="@layout/fragment_mydetails_fragment" />
    <activity
        android:id="@+id/nave_try"
        android:name="com.chanaka.navigationdrawer.try_one"
        android:label="@string/menu_try"
        tools:layout="@layout/activity_try_one" />
    <fragment
        android:id="@+id/sub_details"
        android:name="com.chanaka.navigationdrawer.sub_details"
        android:label="@string/menu_sub"
        tools:layout="@layout/fragment_sub_details" />
</navigation>